Fixes minor layout issues with stats; adds tooltip.

--- a/web-app/css/profiles.css
+++ b/web-app/css/profiles.css
@@ -409,9 +409,16 @@ editor, .toggleNext, a > apc, apnilink, a > i.fa-search {
 }
 
 .stat__number {
-    font-size: 14px;
+    font-size: 12px;
     min-height: 30px;
-    max-height: 40px;
+    max-height: 30px;
+    margin-top: 0;
+}
+
+.stat__title {
+    min-height: 30px;
+    max-height: 30px;
+    font-size: 12px;
 }
 
 .main-stats__stat {
